--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:minHeight="?attr/actionBarSize"
             android:background="@drawable/toolbar_background"
             android:gravity="top|start"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:theme="@style/ThemeOverlay.AppCompat.Light"
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
             <android.support.v7.widget.ActionMenuView
