--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -45,7 +45,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="My Agenda"
+        android:text="B2B"
         android:id="@+id/myAgendaActivityBtn"
         android:layout_alignBottom="@+id/programActivityBtn"
         android:layout_alignEnd="@+id/feedActivityBtn" />
