--- a/app/src/main/res/layout/activity_new_b2_b.xml
+++ b/app/src/main/res/layout/activity_new_b2_b.xml
@@ -13,78 +13,61 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/txtB2BDestinataire"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:hint="Destinataire"
-        android:inputType="textEmailAddress" />
+        android:inputType="textEmailAddress"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
+    <EditText
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Heure Début"
-        android:id="@+id/btnB2bHeureDebut"
-        android:layout_below="@+id/txtB2BDestinataire"
-        android:layout_alignParentStart="true"
-       />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Heure Fin"
-        android:id="@+id/btnB2bHeureFin"
-        android:layout_below="@+id/btnB2bHeureDebut"
-        android:layout_alignParentStart="true"
-        android:layout_alignEnd="@+id/btnB2bHeureDebut" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:hint="Heure Début"
         android:id="@+id/txtB2bHeureDebut"
-        android:textSize="12pt"
-        android:textColor="#000000"
-        android:layout_alignBottom="@+id/btnB2bHeureDebut"
-        android:layout_alignParentEnd="true" />
+        android:layout_below="@+id/txtB2BDestinataire"
+        android:layout_toStartOf="@+id/txtB2BDestinataire"
+        android:inputType="time" />
 
-    <TextView
+    <EditText
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:hint="Heure Fin"
         android:id="@+id/txtB2bHeureFin"
-        android:textSize="12pt"
-        android:textColor="#000000"
-        android:layout_alignBottom="@+id/btnB2bHeureFin"
-        android:layout_alignParentEnd="true" />
+        android:layout_below="@+id/txtB2BDestinataire"
+        android:layout_toEndOf="@+id/txtB2BDestinataire"
+        android:inputType="time" />
+
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editTextB2bCompanie"
-        android:layout_below="@+id/btnB2bHeureFin"
-        android:layout_alignParentStart="true"
         android:hint="Companie"
         android:padding="10dp"
-        />
+        android:layout_below="@+id/txtB2bHeureDebut"
+        android:layout_alignStart="@+id/txtB2bHeureDebut"
+        android:inputType="textCapSentences" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editTextB2bCompanie"
-        android:layout_alignParentStart="true"
         android:id="@+id/editTextB2bNom"
         android:hint="Nom"
-        android:padding="10dp"/>
+        android:padding="10dp"
+        android:layout_below="@+id/editTextB2bCompanie"
+        android:layout_alignStart="@+id/editTextB2bPoste"
+        android:inputType="textCapSentences" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editTextB2bPoste"
         android:hint="Poste"
+        android:padding="10dp"
         android:layout_below="@+id/editTextB2bNom"
-        android:layout_alignParentStart="true"
-        android:padding="10dp"/>
+        android:layout_alignStart="@+id/editTextB2bPhone"
+        android:inputType="textCapSentences" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -94,15 +77,16 @@
         android:id="@+id/editTextB2bPhone"
         android:hint="Telephone"
         android:layout_below="@+id/editTextB2bPoste"
-        android:layout_alignParentStart="true" />
+        android:layout_alignStart="@+id/editTextB2bEmail" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editTextB2bEmail"
         android:hint="Email"
+        android:inputType="textEmailAddress"
         android:layout_below="@+id/editTextB2bPhone"
-        android:layout_alignParentStart="true" />
+        android:layout_alignStart="@+id/editTextB2bBatiment" />
 
     <Spinner
         android:layout_width="wrap_content"
@@ -110,9 +94,8 @@
         android:id="@+id/spinnerBatiementExterieur"
         android:spinnerMode="dropdown"
         android:layout_below="@+id/editTextB2bBatiment"
-        android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/txtB2BDestinataire"
-        android:layout_alignEnd="@+id/txtB2BDestinataire" />
+        android:layout_alignStart="@+id/editTextB2bCompanie"
+        android:paddingTop="10dp"/>
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -127,9 +110,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editTextB2bBatiment"
-        android:layout_below="@+id/editTextB2bEmail"
-        android:layout_alignParentStart="true"
         android:hint="Batiment"
-        android:paddingTop="10dp"/>
+        android:paddingTop="10dp"
+        android:layout_below="@+id/editTextB2bEmail"
+        android:layout_alignStart="@+id/spinnerBatiementExterieur"
+        android:inputType="textCapSentences" />
 
 </RelativeLayout>
