deuxième étape de readSurveyResults.  À revoir : SurveyObjectResults

--- a/app/src/main/res/layout/activity_survey.xml
+++ b/app/src/main/res/layout/activity_survey.xml
@@ -41,7 +41,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btnNextSurvey"
-        android:background="@drawable/next"
+        android:src="@drawable/next"
+        android:background="?selectableItemBackground"
         android:textSize="13pt"
         android:layout_alignParentBottom="true"
         android:layout_alignEnd="@+id/idMultiple" />
