--- a/app/src/main/res/layout/dialog_login.xml
+++ b/app/src/main/res/layout/dialog_login.xml
@@ -44,7 +44,7 @@
         android:ems="10"
         android:id="@+id/txtLoginEmail"
         android:layout_gravity="center_horizontal"
-        android:hint="Nom"
+        android:hint="Email"
         android:textAlignment="center"
         android:paddingBottom="15dp"
         />
