--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="colorCCQFGreen1">#35873f</color>
     <color name="colorCCQFGreen2">#415d2d</color>
 
+    <color name="colorChatCCQF">#eab4a8</color>
+    <color name="colorChatUser">#bcf7c3</color>
+
 </resources>
