--- a/app/src/main/res/layout/activity_survey_create.xml
+++ b/app/src/main/res/layout/activity_survey_create.xml
@@ -1,68 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".SurveyCreate"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <EditText
+        android:paddingTop="10dp"
+        android:id="@+id/txtNewQuestion"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:hint="Question"
+        android:gravity="center"/>
+    <Button
+        android:id="@+id/btnNewAnswer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:layout_gravity="center_vertical"
+        android:text="@string/txtNouvelleQuestion"
+        android:layout_below="@+id/txtNewQuestion"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
 
-        <EditText
-            android:id="@+id/txtNewQuestion"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:hint="Question"
-            android:gravity="center"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="20dp"
-        android:weightSum="2">
+        android:id="@+id/listViewNewAnswers"
+        android:layout_gravity="center_horizontal"
+        android:layout_below="@+id/btnNewAnswer"
+        android:layout_above="@+id/btnNewSurveyDone" />
 
-        <Button
-            android:id="@+id/btnNewAnswer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:layout_gravity="center_vertical"
-            android:text="@string/txtNouvelleQuestion"
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="280dp">
-
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/listViewNewAnswers"
-            android:layout_gravity="center_horizontal" />
-    </LinearLayout>
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:id="@+id/btnNewSurveyDone"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="done"
-            android:gravity="center"
-            />
-    </LinearLayout>
+    <Button
+        android:id="@+id/btnNewSurveyDone"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="done"
+        android:gravity="center"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
 
 
-</LinearLayout>
+</RelativeLayout>
