--- a/app/src/main/res/layout/activity_doc_details.xml
+++ b/app/src/main/res/layout/activity_doc_details.xml
@@ -9,4 +9,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.devel.ccqf.ccqfmisson.DocDetails">
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listViewDocDetails"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
