--- a/app/src/main/res/layout/dialog_destinataires.xml
+++ b/app/src/main/res/layout/dialog_destinataires.xml
@@ -2,10 +2,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <Button
+        android:id="@+id/btnRefreshUserList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_popup_sync"
+        android:background="#ffffffff"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
     <ListView
         android:id="@+id/lstUserList"
         android:layout_width="wrap_content"
-        android:layout_height="350dp"/>
+        android:layout_height="300dp"
+        android:layout_below="@id/btnRefreshUserList" />
     <Button
         android:id="@+id/btnUserListOk"
         android:layout_width="match_parent"
