--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:fitsSystemWindows="true"
     tools:context="com.devel.ccqf.ccqfmisson.MainActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <!--android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -31,7 +31,7 @@
                 android:layout_height="?attr/actionBarSize"/>
         </android.support.v7.widget.Toolbar>
 
-    </android.support.design.widget.AppBarLayout>
+    </android.support.design.widget.AppBarLayout-->
 
     <!--include android:id="@+id/tToolbar"
         android:layout_height="wrap_content"
