--- a/app/src/main/res/layout/activity_new_b2_b.xml
+++ b/app/src/main/res/layout/activity_new_b2_b.xml
@@ -7,6 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/colorWhite"
     tools:context="com.devel.ccqf.ccqfmisson.NewB2B">
 
     <EditText
@@ -99,6 +100,8 @@
 
     <Button
         style="?android:attr/buttonStyleSmall"
+        android:background="@color/colorCCQFOrange"
+        android:textColor="@color/colorWhite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ok"
