--- a/app/src/main/res/layout/activity_survey_create.xml
+++ b/app/src/main/res/layout/activity_survey_create.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/bg_patern"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -19,6 +18,7 @@
         android:layout_weight="2"
         android:layout_gravity="center_vertical"
         android:text="@string/txtNouvelleQuestion"
+        style="@style/CCQFButton"
         android:layout_below="@+id/txtNewQuestion"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true" />
@@ -36,6 +36,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="done"
+        style="@style/CCQFButton"
         android:gravity="center"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
