--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.devel.ccqf.ccqfmisson.MainActivity"
-    android:theme="@style/AppTheme">
+    tools:context="com.devel.ccqf.ccqfmisson.MainActivity" >
 
    <include
         layout="@layout/content_main" />
