--- a/app/src/main/res/layout/dialog_pub.xml
+++ b/app/src/main/res/layout/dialog_pub.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/full_ad">
+    android:background="@drawable/full_ad"
+    android:id="@+id/pubLayout">
 
     <Button
         style="?android:attr/buttonStyleSmall"
