--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -50,17 +50,15 @@
         android:layout_alignBottom="@id/programActivityBtn"
         android:layout_alignEnd="@id/feedActivityBtn"
         android:background="@drawable/calendar_300px"/>
-
-    <ImageButton
-        android:layout_width="wrap_content"
+    <ImageView
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@id/imageButton"
-        android:contentDescription=""
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="@drawable/dummy_banner"
+        android:contentDescription=""
         android:padding="0dp"
-        android:layout_margin="0dp" />
-
+        android:layout_margin="0dp"
+        android:src="@drawable/dummy_banner" />
 </RelativeLayout>
