--- a/app/src/main/res/layout/dialog_pub.xml
+++ b/app/src/main/res/layout/dialog_pub.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/full_ad"
+
     android:id="@+id/pubLayout">
 
     <Button
@@ -12,4 +13,26 @@
         android:id="@+id/btnDialogPubDismiss"
         android:layout_gravity="right"
         android:background="@android:drawable/ic_delete"/>
-</LinearLayout>
+</LinearLayout-->
+<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+
+    <ImageView
+        android:id="@+id/pubLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="0dp"
+        android:layout_margin="0dp"/>
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:id="@+id/btnDialogPubDismiss"
+        android:layout_gravity="right"
+        android:background="@android:drawable/ic_delete"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
+
+</RelativeLayout>
