--- a/app/src/main/res/drawable/bg_msg_from.xml
+++ b/app/src/main/res/drawable/bg_msg_from.xml
@@ -9,4 +9,9 @@
     <corners android:radius="5dp" >
     </corners>
 
+    <stroke
+        android:width="2dp"
+        android:color="@color/colorCCQFOrange" >
+    </stroke>
+
 </shape>
