--- a/app/src/main/res/layout-xxhdpi/content_main.xml
+++ b/app/src/main/res/layout-xxhdpi/content_main.xml
@@ -63,4 +63,48 @@
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
         android:layout_marginTop="0dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Agenda"
+        android:id="@+id/textView5"
+        android:layout_below="@+id/myAgendaActivityBtn"
+        android:layout_alignEnd="@+id/myAgendaActivityBtn"
+        android:layout_alignStart="@+id/myAgendaActivityBtn"
+        android:textAlignment="center"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Program"
+        android:id="@+id/textView6"
+        android:layout_below="@+id/programActivityBtn"
+        android:layout_alignStart="@+id/programActivityBtn"
+        android:layout_alignEnd="@+id/programActivityBtn"
+        android:textAlignment="center"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Messagerie"
+        android:id="@+id/textView7"
+        android:layout_below="@+id/feedActivityBtn"
+        android:layout_alignStart="@+id/feedActivityBtn"
+        android:layout_alignEnd="@+id/feedActivityBtn"
+        android:textAlignment="center"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Documents"
+        android:id="@+id/textView8"
+        android:layout_alignTop="@+id/textView7"
+        android:layout_alignStart="@+id/docActivityBtn"
+        android:layout_alignEnd="@+id/docActivityBtn"
+        android:textAlignment="center"/>
 </RelativeLayout>
