--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -61,4 +61,48 @@
         android:padding="0dp"
         android:layout_margin="0dp"
         android:src="@drawable/dummy_banner" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Documents"
+        android:id="@+id/textView9"
+        android:layout_below="@+id/docActivityBtn"
+        android:layout_alignEnd="@+id/docActivityBtn"
+        android:layout_alignStart="@+id/docActivityBtn"
+        android:textAlignment="center"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Messagerie"
+        android:id="@+id/textView10"
+        android:layout_below="@+id/feedActivityBtn"
+        android:layout_alignStart="@+id/feedActivityBtn"
+        android:layout_alignEnd="@+id/feedActivityBtn"
+        android:textAlignment="center"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Program"
+        android:id="@+id/textView11"
+        android:layout_below="@+id/programActivityBtn"
+        android:layout_alignStart="@+id/programActivityBtn"
+        android:layout_alignEnd="@+id/programActivityBtn"
+        android:textAlignment="center"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Agenda"
+        android:id="@+id/textView12"
+        android:layout_alignTop="@+id/textView11"
+        android:layout_alignStart="@+id/myAgendaActivityBtn"
+        android:layout_alignEnd="@+id/myAgendaActivityBtn"
+        android:textAlignment="center"/>
 </RelativeLayout>
