--- a/app/src/main/res/drawable/bg_msg_you.xml
+++ b/app/src/main/res/drawable/bg_msg_you.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle" >
 
     <!-- view background color -->
-    <solid android:color="@color/colorChatUser" >
+    <solid android:color="@color/colorCCQFGreen0" >
     </solid>
 
     <corners android:radius="5dp" >
