--- a/app/src/main/res/layout/activity_survey_create.xml
+++ b/app/src/main/res/layout/activity_survey_create.xml
@@ -35,7 +35,7 @@
         android:id="@+id/btnNewSurveyDone"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="done"
+        android:text="Envoyer"
         style="@style/CCQFButton"
         android:gravity="center"
         android:layout_alignParentBottom="true"
